--- a/style.css
+++ b/style.css
@@ -1,4 +1,15 @@
 body{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 20px;
+    text-align: center;
 } 
+
+.boton{
+    margin: 0 auto;
+    padding: 20px;
+    font-size: 20px;
+}
+
+div{
+    text-align: center;
+}
