--- a/style.css
+++ b/style.css
@@ -30,3 +30,61 @@ body{
     margin-top: -20px;
 }
 
+.listaProductos{
+    background-color: #FBF8EF;
+    padding: 40px;
+    border-radius: 20px;
+    width: 90%;
+    margin: 0 auto;
+    text-align: center;
+
+}
+
+.containerProducto{
+    background-color:#fff;
+    border-radius: 10px;
+    padding: 10px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    width: 80%;
+    margin: 0 auto;
+    margin-bottom: 40px;
+}
+
+.empresaNombre{
+    font-size: 30px;
+    color: #615d5d;
+    font-weight: bold;
+}
+
+.tipoEmpresaNombre{
+    font-size: 14px;
+    color: #727272;
+}
+
+.empresaDireccion{
+    font-size: 20px;
+    padding: 10px;
+  
+}
+.empresaDireccion img{
+    width: 70px;
+    height: 40px;
+}
+.empresaDireccion label{
+    font-size: 20px;
+    color: #727272;
+    text-decoration:underline ;
+}
+
+.productoNombre{
+    font-size: 40px;
+    color: #484851;
+    padding: 20px;
+}
+
+.iconoEmpresa{
+    width: 50px;
+    height: 50px;
+}
+
