--- a/TinderPet/styles.css
+++ b/TinderPet/styles.css
@@ -4,7 +4,7 @@ body {
 }
 
 #container {
-  width: 400px;
+  width: 90%;
   margin: 0 auto;
   text-align: center;
   background-color: white;
@@ -13,15 +13,16 @@ body {
 }
 
 header {
-  padding: 20px;
+  padding: 30px;
   background-color: #f44336;
   color: white;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
+  margin-bottom: 40px;
 }
 
 header h1 {
-  font-size: 24px;
+  font-size: 50px;
   margin: 0;
 }
 
@@ -30,8 +31,8 @@ main {
 }
 
 #profile img {
-  width: 300px;
-  height: 300px;
+  width: 600px;
+  height: 600px;
   border-radius: 50%;
   margin-bottom: 10px;
   object-fit: cover;
@@ -42,8 +43,8 @@ main {
 }
 
 .profile-info h2 {
-  font-size: 20px;
-  margin: 0;
+  font-size: 40px;
+  margin: 0;  
   text-align: center;
 }
 
@@ -54,22 +55,25 @@ main {
 
 .profile-info .age {
   text-align: center;
+  font-size: 30px;
 }
 
 .profile-info .descripcion {
   text-align: justify;
   padding: 20px;
+  font-size: 30px;
 }
 
 #buttons button {
-  padding: 10px 20px;
+  padding: 20px;
   margin: 10px;
-  font-size: 18px;
+  font-size: 30px;
   border-radius: 20px;
   border: none;
   color: white;
   cursor: pointer;
   transition: background-color 0.3s;
+  margin-top: 40px;
 }
 
 #buttons button:first-child {
