--- a/style.css
+++ b/style.css
@@ -91,7 +91,25 @@ body{
 
 }
 
-.PruebaCarousel-container {
+.swiper-container {
+    width: 100%;
+    height: 400px;
+    margin-bottom: 30px;
+  }
+  
+  .swiper-slide img {
+    max-width: 300px;
+    height: 300px!important; 
+  }
+  .swiper-slide{
+    padding: 30px;
+    background-color: #fff;
+    border-radius: 40px;
+
+ 
+  }  
+
+/* .PruebaCarousel-container {
     width: 100% !important;
     overflow: hidden!important;
     margin-bottom: 50px;
@@ -117,4 +135,4 @@ body{
     height: auto!important;
     display: block!important;
   }
-  
+   */
