--- a/style.css
+++ b/style.css
@@ -98,17 +98,17 @@ body{
   }
   
   .swiper-slide img {
-    max-width: 300px;
-    height: 300px!important; 
+    max-width: 290px;
+    height: 290px!important; 
   }
   .swiper-slide{
     padding: 30px;
     background-color: #fff;
     border-radius: 40px;
-
- 
-  }  
-
+    text-align: center;
+    width: 400px;
+    margin-right: 40px;
+  }
 /* .PruebaCarousel-container {
     width: 100% !important;
     overflow: hidden!important;
